profilelist1exp/unpackaged/objects/Idea_Intake__c.object
<CustomObject>
    <description>16.03 Mainainance - Object to replace account storm</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <inlineHelpText>Please provide pass/fail criteria to ensure this feature is implemented correctly, such as: &apos;A manager can approve or disapprove a request&apos; or &apos;1-2 seconds for a query response’</inlineHelpText>
        <label>Acceptance Criteria</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Actual_Days_to_Closure__c</fullName>
        <description>08842 – Idea Intake Fields under System Information section</description>
        <formula>Days_to_Closure__c - On_Hold_Duration_Formula__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual Days to Closure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BRD_Submission__c</fullName>
        <label>BRD Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BR__c</fullName>
        <label>Ref Info</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Challenge__c</fullName>
        <inlineHelpText>As a (type of user) provide context for what led to this change request</inlineHelpText>
        <label>As a… (Context)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Justification__c</fullName>
        <inlineHelpText>Please explain the benefit or value that will be realized if this change is made</inlineHelpText>
        <label>So that…</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Objective__c</fullName>
        <inlineHelpText>Please explain the objective of this request, and provide specific details on what you want to change</inlineHelpText>
        <label>I Want…</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CR_Status__c</fullName>
        <label>CR Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Complexity_New__c</fullName>
        <description>08842 – Idea Intake Field for Idea Power User under Impact Assessment</description>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Complexity__c</fullName>
        <label>Complexity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Create_CR__c</fullName>
        <formula>IF( AND(ISPICKVAL(Status__c,&apos;Approved&apos;),
         ISPICKVAL(Review_Step__c ,&apos;Complete&apos;),                 
         (ISBLANK(PMO_CR__c))), 
HYPERLINK(&quot;/apex/ideacrcreationpage?id=&quot;&amp;Id, IMAGE(&apos;/resource/CreateCR&apos;,&apos;CreateCR&apos;),&quot;_self&quot;),&apos;&apos;)</formula>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_message__c</fullName>
        <formula>IMAGE(&quot;/resource/Attachment_Info&quot;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>&lt;font color=&quot;#fff&quot;&gt;</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_to_Closure__c</fullName>
        <label>Days to Closure</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dell_Release__c</fullName>
        <label>Dell Release</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_System_ID__c</fullName>
        <label>External System ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Category__c</fullName>
        <label>Feature Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Effort__c</fullName>
        <label>Feature Effort</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Win</fullName>
                </value>
                <value>
                    <fullName>Potential Quick Win</fullName>
                </value>
                <value>
                    <fullName>Project</fullName>
                </value>
                <value>
                    <fullName>Research Needed</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Not Enabled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Enablement__c</fullName>
        <label>Feature Enablement</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Enabled</fullName>
                </value>
                <value>
                    <fullName>Admin Check Box</fullName>
                </value>
                <value>
                    <fullName>Contact SFDC</fullName>
                </value>
                <value>
                    <fullName>Setup Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feature_Sub_Category__c</fullName>
        <label>Feature Sub-Category</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Feature_Team__c</fullName>
        <label>Feature Team</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Help_and_Training_URL__c</fullName>
        <label>Help and Training URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Idea_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Idea_Id</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Idea_Record_Link__c</fullName>
        <label>Idea Record Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Idea_Submission_Instructions__c</fullName>
        <defaultValue>&quot;https://dell.my.salesforce.com/069A0000001JEGK&quot;</defaultValue>
        <label>Idea Submission Instructions</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Impact_Business__c</fullName>
        <label>Impact: Business</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Communications__c</fullName>
        <label>Impact: Communications</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Cross_Functional__c</fullName>
        <label>Impact: Cross Functional</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>S&amp;P</fullName>
                </value>
                <value>
                    <fullName>DSG</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>CCC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Customization__c</fullName>
        <label>Impact: Customization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_License__c</fullName>
        <label>Impact: License</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Training__c</fullName>
        <label>Impact: Training</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
                <value>
                    <fullName>Knowledge Nugget</fullName>
                </value>
                <value>
                    <fullName>Knowledge Nugget w/Audio</fullName>
                </value>
                <value>
                    <fullName>Business Provided</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Initial_Response_Days__c</fullName>
        <label>Initial Response Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integrations__c</fullName>
        <label>Integrations</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AIC</fullName>
                </value>
                <value>
                    <fullName>Boomi</fullName>
                </value>
                <value>
                    <fullName>EBI</fullName>
                </value>
                <value>
                    <fullName>ECC</fullName>
                </value>
                <value>
                    <fullName>Eloqua</fullName>
                </value>
                <value>
                    <fullName>Isilon</fullName>
                </value>
                <value>
                    <fullName>My Quotes</fullName>
                </value>
                <value>
                    <fullName>RQF</fullName>
                </value>
                <value>
                    <fullName>SAP</fullName>
                </value>
                <value>
                    <fullName>Territory/Hierarchy (Core)</fullName>
                </value>
                <value>
                    <fullName>Territory/Hierarchy (Main)</fullName>
                </value>
                <value>
                    <fullName>TRACK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_reporting_dashboard_request__c</fullName>
        <label>Is this a reporting / dashboard request?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Launch_date__c</fullName>
        <label>Launch date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MoSCoW_Value__c</fullName>
        <inlineHelpText>Must Have, Should Have, Could Have, Won&apos;t Have
Default Value: S</inlineHelpText>
        <label>MoSCoW Value</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>S</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>W</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Date__c</fullName>
        <label>On Hold Duration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Formula__c</fullName>
        <formula>IF(ISPICKVAL(Status__c , &quot;On Hold&quot;),  
IF
(
OR(On_Hold_Duration_Total__c  &lt;&gt; null,On_Hold_Duration_Total__c  &lt;&gt; 0), 
(TODAY() - DATEVALUE(On_Hold_Duration_Date__c)) +  On_Hold_Duration_Total__c, 
TODAY() - DATEVALUE(On_Hold_Duration_Date__c)
), 
On_Hold_Duration_Total__c)</formula>
        <label>On Hold Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Hold_Duration_Total__c</fullName>
        <label>On Hold Duration Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>On_Under_Review_DurartionDate__c</fullName>
        <label>On Under Review DurartionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>On_Under_Review_Total_Days__c</fullName>
        <label>On Under Review Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Requester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Intake</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PMO_CR__c</fullName>
        <label>PMO CR #</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pilot_or_Beta__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pilot or Beta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platforms_Impacted__c</fullName>
        <label>Platforms Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Dell Main</fullName>
                </value>
                <value>
                    <fullName>EMC Core Sales</fullName>
                </value>
                <value>
                    <fullName>EMC Core Service Cloud</fullName>
                </value>
                <value>
                    <fullName>Partner Portal (Core)</fullName>
                </value>
                <value>
                    <fullName>Partner Portal (Main)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <displayFormat>{00000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Regions_Impacted__c</fullName>
        <label>Regions Impacted</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
                <value>
                    <fullName>ABU</fullName>
                    <label>NA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_CR__c</fullName>
        <label>Related CR</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Demand__c</fullName>
        <label>Related Demand</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_IdeaRelease_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Idea Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Idea_Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Idea</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Idea_Intake__c</referenceTo>
        <relationshipLabel>Related Release Records</relationshipLabel>
        <relationshipName>Related_Release_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_IdeaSeasonal_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Idea Record</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Idea_Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Idea</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Idea_Intake__c</referenceTo>
        <relationshipLabel>Related Seasonal Records</relationshipLabel>
        <relationshipName>Related_Seasonal_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Idea_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Idea</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Idea_Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Idea</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Idea_Intake__c</referenceTo>
        <relationshipLabel>Related Idea Records</relationshipLabel>
        <relationshipName>Related_Idea_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Release_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Planned Release</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Idea_Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Release</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Idea_Intake__c</referenceTo>
        <relationshipLabel>Related Idea Records</relationshipLabel>
        <relationshipName>Related_ReleaseIdea_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Seasonal_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Seasonal Feature</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Idea_Intake__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Seasonal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Idea_Intake__c</referenceTo>
        <relationshipLabel>Related Idea Records</relationshipLabel>
        <relationshipName>RelatedSeasonalIdeaRecord</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Release_Notes_URL__c</fullName>
        <label>Release Notes URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Release_Priority__c</fullName>
        <label>Release Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Release_Type__c</fullName>
        <label>Release Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Hit</fullName>
                </value>
                <value>
                    <fullName>Sprint</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Force.com</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Fast Track</fullName>
                </value>
                <value>
                    <fullName>Incident</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
                <value>
                    <fullName>Release</fullName>
                </value>
                <value>
                    <fullName>Road Map</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requested_on_behalf_of__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested on behalf of</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Intake1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Requesting_organization__c</fullName>
        <label>Requesting organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Channel</fullName>
                </value>
                <value>
                    <fullName>Competitive Team</fullName>
                </value>
                <value>
                    <fullName>Data Stewards</fullName>
                </value>
                <value>
                    <fullName>GSD</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>S&amp;P</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Sales Ops</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Speciality Sales</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requesting_region__c</fullName>
        <label>Requesting region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ABU</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>LATAM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Researcher_Moderator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Researcher/ Moderator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Intake2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Respects_DNAE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Respects DNAE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_Notes_and_Comments__c</fullName>
        <label>Review Notes and Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Review_Priority__c</fullName>
        <label>Review Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Very Low</fullName>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>Moderate</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Very High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Step__c</fullName>
        <label>Review Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Business Review</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Core Review</fullName>
                </value>
                <value>
                    <fullName>IT Review</fullName>
                </value>
                <value>
                    <fullName>Pending Feedback</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reviewer_IT__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer: IT</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Idea_Intake3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SFDC_Release__c</fullName>
        <label>SFDC Release</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Deployed</fullName>
                </value>
                <value>
                    <fullName>Implemented</fullName>
                </value>
                <value>
                    <fullName>In Development</fullName>
                </value>
                <value>
                    <fullName>Merged</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Pending Development</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Ready to Deploy</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Review Complete - Eliminated from consideration</fullName>
                </value>
                <value>
                    <fullName>Review Complete - Released</fullName>
                </value>
                <value>
                    <fullName>Review Complete - Revisit in the future</fullName>
                </value>
                <value>
                    <fullName>Review Complete - Schedule for release</fullName>
                </value>
                <value>
                    <fullName>Review in Process - Assessing Impact</fullName>
                </value>
                <value>
                    <fullName>Review in Process - Obtaining stakeholder feedback</fullName>
                </value>
                <value>
                    <fullName>Review in Process - On Hold</fullName>
                </value>
                <value>
                    <fullName>Review in Process - Researching Capability</fullName>
                </value>
                <value>
                    <fullName>Undefined</fullName>
                </value>
                <value>
                    <fullName>Under Review</fullName>
                </value>
                <value>
                    <fullName>Underway</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TFS_ID__c</fullName>
        <label>TFS ID #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TT__c</fullName>
        <inlineHelpText>Enter related TT # or SAR #</inlineHelpText>
        <label>Incident #</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Release__c</fullName>
        <label>Targeted Release</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>